@@ -299,6 +299,7 @@ x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low
     - helpdialog.cpp: use QT_VERSION macro to select either a monospaced or
       typewriter font (Qt < 4.7.0 only supports TypeWriter.)
     - x2goutils.{cpp,h}: add new font_is_monospaced() helper.
+    - helpdialog.cpp: try harder to set a monospaced font.
 
   [ Fernando Pedemonte ]
   * New upstream release (4.0.4.0):
